syntax = "proto3";

import "base.proto";

service GameService {
    rpc ConnectAndListenState(ConnectRequest) returns (stream GameState);
    rpc SendChatMessage(ChatMessage) returns (Empty);
    rpc ListenChat(Empty) returns (stream ChatMessage);
    rpc ListenPlayerConnections(ConnectRequest) returns (stream PlayerConnection);
}

message ConnectRequest {
    string Nickname = 1;
}

message GameState {
	PlayerState Player = 1;
	MapState Map = 2;
	Vector BasePos = 3;
}

message PlayerConnection {
    string Nickname = 1;
    PlayerState Player = 2;
    bool State = 3;
}

message PlayerState {
	ID ID = 1;
	int32 Money = 2;
    int32 Limit = 3;

    bool TurretBuildingAvaliable = 4;
    bool WarriorsLabBuildingAvaliable = 5;

    bool UnitArmourUpgradeAvaliable = 6;
    bool UnitDamageUpgradeAvaliable = 7;
    bool UnitAttackRangeUpgradeAvaliable = 8;
    bool TurretAttackUpgradeAvaliable = 9;
    bool BuildingDefenceUpgradeAvaliable = 10;
    bool BuildingArmourUpgradeAvaliable = 11;
    
    int32 MeleeWarriorCost = 12;
    int32 RangedWarriorCost = 13;

    int32 WorkerCost = 14;

    int32 CentralBuildingCost = 15;
    int32 MiningCampCost = 16;
    int32 BarrakCost = 17;
    int32 TurretCost = 18;
    int32 BuildersLabCost = 19;
    int32 WarriorsLabCost = 20;

    int32 TurretAttackUpgradeCost = 21;
    int32 BuildingDefenceUpgradeCost = 22;
    int32 BuildingArmourUpgradeCost = 23;
    int32 UnitArmourUpgradeCost = 24;
    int32 UnitDamageUpgradeCost = 25;
    int32 UnitAttackRangeUpgradeCost = 26;

    int32 Team = 27;
}

message MapState {
    int32 Width = 1;
    int32 Lenght = 2;
    repeated float Heights = 3;
    repeated int32 Objects = 4;
}

message ChatMessage {
    string Nickname = 1;
    int32 StickerID = 2;
}